XMLExper/m12/m12_448_1_tinyxml2/comparisono.txt
tinyxml2.cpp: In constructor ‘tinyxml2::XMLUnknown::XMLUnknown(tinyxml2::XMLDocument*)’:
tinyxml2.cpp:1398:62: error: invalid conversion from ‘tinyxml2::XMLNode*’ to ‘tinyxml2::XMLDocument*’ [-fpermissive]
 1398 | XMLUnknown::XMLUnknown( XMLDocument* doc ) : XMLNode( /*PCI*/dynamic_cast<tinyxml2::XMLNode*>(doc) )
      |                                                              ^~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
      |                                                              |
      |                                                              tinyxml2::XMLNode*
tinyxml2.cpp:811:32: note:   initializing argument 1 of ‘tinyxml2::XMLNode::XMLNode(tinyxml2::XMLDocument*)’
  811 | XMLNode::XMLNode( XMLDocument* doc ) :
      |                   ~~~~~~~~~~~~~^~~
diff: tinyxml2.o: No such file or directory
